<resources>
    <string name="app_name">GreenBike</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Green Bike</string>
    <string name="nav_header_subtitle">green.bike@company.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_bikes">Bikes</string>
    <string name="menu_brands">Brands</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_materials">Materials</string>
    <string name="list_of_bike_materials">List of bike materials</string>
    <string name="list_of_bike_categories">List of bike categories</string>
    <string name="list_of_bikes">List of bikes</string>
    <string name="delete">Delete</string>
    <string name="steal">Steal</string>
    <string name="edit_bike_material">Edit Bike Material</string>
    <string name="edit_bike_category">Edit Bike Category</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="list_of_bike_brands">List of bike brands</string>
    <string name="edit_bike_brand">Edit bike brand</string>
    <string name="buy">Buy</string>
    <string name="rent">Rent</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="title_home">For Rent</string>
    <string name="title_dashboard">For Buy</string>
    <string name="title_notifications">Mine</string>
    <string name="list_of_bike_for_rent">List of bikes for rent</string>
    <string name="list_of_bikes_for_buy">List of bikes for buy</string>
    <string name="your_taken_bikes">Your taken bikes</string>
    <string name="welcome_to_admin_panel">Welcome to admin panel</string>
    <string name="model">Model:&#160;</string>
    <string name="category">Category:&#160;</string>
    <string name="brand">Brand:&#160;</string>
    <string name="material">Material:&#160;</string>
    <string name="is_for_rent">Is for rent:&#160;</string>
    <string name="price">Price:&#160;</string>
    <string name="plus_sign">+</string>
    <string name="name_semi_colon">Name:&#160;</string>
</resources>