<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_mobile_navigation"
    app:startDestination="@+id/navigation_for_rent">

    <fragment
        android:id="@+id/navigation_for_rent"
        android:name="com.example.greenbike.ui.user.RentBikesFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_rent_bikes" />

    <fragment
        android:id="@+id/navigation_for_buy"
        android:name="com.example.greenbike.ui.user.BuyBikesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_mine_bikes" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.example.greenbike.ui.user.MineBikesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_buy_bikes" />
</navigation>